--- a/jike.html
+++ b/jike.html
@@ -9,27 +9,30 @@
 </head>
 <body>
   <div class="page-header">
-    <div class="container">
+    <div class="header-container">
       <img src="./logo.png" alt="jike" class="page-logo">
       <nav class="nav-content">
-        <div class="content-class">
+        <div class="page-header_guide">
           <a href="javascript:;" >讲堂</a>
+          <a href="javascript:;" class="nav-content_hot">
+            算法训练营<img src="./hot.png" alt="hot">
+          </a>
+          <a href="javascript:;" >极客商城</a>
+          <a href="javascript:;" >客户端下载</a>
+          <a href="javascript:;" >兑换中心</a>
+          <a href="javascript:;" >渠道合作</a>
+          <a href="javascript:;" >企业服务</a>
+          <a href="javascript:;" >热点资讯</a>
         </div>
-        <a href="javascript:;" >算法训练营</a>
-        <img src="./hot.png" alt="hot" class="nav-content_hot">
-        <a href="javascript:;" >极客商城</a>
-        <a href="javascript:;" >客户端下载</a>
-        <a href="javascript:;" >兑换中心</a>
-        <a href="javascript:;" >渠道合作</a>
-        <a href="javascript:;" >企业服务</a>
-        <a href="javascript:;" >热点资讯</a>
-        <img src="./搜索.png" alt="sousuo" class="nav-content_sousuo">
-        <img src="./new.png" alt="new" class="nav-content_new">
-        <div class="content-enter">
-          <a href="javascript:;">登录</a>
-          <a href="javascript:;">注册</a>
+        <div class="nav-content_seek">
+          <img src="./搜索.png" alt="sousuo" class="nav-content_sousuo">
+          <img src="./new.png" alt="new" class="nav-content_new">
         </div>
       </nav>
+      <div class="content-enter">
+        <a href="javascript:;">登录</a>
+        <a href="javascript:;">注册</a>
+      </div>
     </div>
   </div>
   <div class="page-content">
