--- a/jike.html
+++ b/jike.html
@@ -14,7 +14,7 @@
       <nav class="header-nav">
         <div class="nav-list">
           <a href="javascript:;" >讲堂</a>
-          <a href="javascript:;" class="nav-list_hot">
+          <a href="javascript:;" class="nav-item">
             算法训练营<img src="./hot.png" alt="hot">
           </a>
           <a href="javascript:;" >极客商城</a>
@@ -76,7 +76,7 @@
             </div>
             <div class="study-content">
               <div class="study-list">
-                <div  class="study-list_item">
+                <div  class="study-item">
                 <span>免费</span>
                 </div>
                 <a href="javascript:;">开篇词 | 搞懂“实时交互”的IM技术，将会有什么新机遇？</a>
@@ -90,14 +90,14 @@
             </div>
             <div class="price-content">
               <div class="price-list">
-                <div class="price-list_left">
+                <div class="price-item_left">
                   <span>限时 ¥45</span>
                 </div>
-                <div class="price-list_right">
+                <div class="price-item_right">
                   <span>原价 ¥68</span>
                 </div>
               </div>
-              <div class="price-list_buttom">
+              <div class="price-item_buttom">
                 <button>立即订阅</button>
               </div>
             </div>
@@ -119,7 +119,7 @@
             </div>
             <div class="study-content">
               <div class="study-list">
-                <div  class="study-list_item">
+                <div  class="study-item">
                 <span>免费</span>
                 </div>
                 <a href="javascript:;">开篇词 | 为什么你要关注研发效能？</a>
@@ -136,14 +136,14 @@
             </div>
             <div class="price-content">
               <div class="price-list">
-                <div class="price-list_left">
+                <div class="price-item_left">
                   <span>限时 ¥68</span>
                 </div>
-                <div class="price-list_right">
+                <div class="price-item_right">
                   <span>原价 ¥99</span>
                 </div>
               </div>
-              <div class="price-list_buttom">
+              <div class="price-item_buttom">
                 <button>立即订阅</button>
               </div>
             </div>
@@ -165,25 +165,25 @@
               </div>
               <div class="study-content">
                 <div class="study-list">
-                  <div  class="study-list_item">
+                  <div  class="study-item">
                   <span>免费</span>
                   </div>
                   <a href="javascript:;">01 | 课程介绍</a>
                 </div>
                 <div class="study-list">
-                  <div  class="study-list_item">
+                  <div  class="study-item">
                   <span>免费</span>
                   </div>
                   <a href="javascript:;">02 | 内容综述</a>
                 </div>
                 <div class="study-list">
-                  <div  class="study-list_item">
+                  <div  class="study-item">
                    <span>免费</span>
                   </div>
                   <a href="javascript:;">03 | 什么是ZooKeeper</a>
                 </div>
                 <div class="study-list">
-                   <div  class="study-list_item">
+                   <div  class="study-item">
                   <span>免费</span>
                   </div>
                   <a href="javascript:;">04 | ZooKeeper提供什么服务</a>
@@ -225,14 +225,14 @@
           <div class="service-qrcode">
           <img src="./qrcode.bc44c82.png">
           <div class="service-list">
-            <div class="service-list_item">
+            <div class="service-item">
               <p>扫码关注极客时间服务号</p>
             </div>
-            <div class="service-list_item">
+            <div class="service-item">
               <span>「技术干货」</span>
               <span>「免费资料」</span>
             </div>
-            <div class="service-list_item">
+            <div class="service-item">
               <span>「直播回顾」</span>
               <span>「专栏优惠」</span>
             </div>
